# metly

./: .gitignore  AGENTS.md  dev-backend.sh  dev-frontend.sh  shopify-dev.sh  update-data.sh
backend/: AGENTS.md  README.md  REPOSITORY_DOCUMENTATION.md  SCHEDULE.md  SECURITY_IMPROVEMENTS.md  check_cities.py  check_db.py  check_orders.py  describe_customers.py  describe_orders.py  find_customer_tables.py  main.py  pyproject.toml  run_main.sh  setup-cron.sh
backend/data/: missing_genders.csv
backend/src/db/: createTables.sql
backend/src/endpoints/: auth.py  checkout_dropoff_analysis.py  customerAnalytics.py  customer_behavior_analysis.py  getData.py  insights_dashboard.py  operational_bottlenecks.py  order_flow_analysis.py  productAnalytics.py  refund_return_analysis.py  revenue_leak_analysis.py  shopify.py
backend/src/integrations/dandomain/: classic.py
backend/src/integrations/demo/: demo.py
backend/src/integrations/shopify/: shopify.py
backend/src/scripts/: generateTestData.py
backend/src/scripts/analysis/: consultAi.py  orders.py  predictSales.py  productAdvice.py  products.py
backend/src/scripts/db/: createDB.py  enforceDataProtection.py  populateDB.py
backend/src/scripts/shopify/: create_test_orders.py  generate_test_data.py
backend/tests/: test_shopify_delta.py
metly_backend/: AGENTS.md  REPOSITORY_DOCUMENTATION.md  SECURITY_IMPROVEMENTS.md  add_indexes.py  check_customer.py  check_customer_orders.py  check_customer_summary.py  check_data.py  main.py  passenger_wsgi.py  pyproject.toml  run_main.sh  test_analytics_query.py
metly_backend/data/: name_genders.csv
metly_backend/docs/plans/: 2025-03-09-customer-analytics-design.md
metly_backend/scripts/: generate_jwt.py  migrate_passwords.py
metly_backend/src/db/: createTables.sql
metly_backend/src/endpoints/: getData.py  shopify.py
metly_backend/src/integrations/dandomain/: modern.py
metly_backend/src/integrations/demo/: demo.py
metly_backend/src/integrations/shopify/: __init__.py  shopify.py
metly_backend/src/scripts/analysis/: consultAi.py  customers.py  (+1 more)
(+139 files in other folders)
